# heatwave-mean-shift

./: .gitignore  README.md  pyproject.toml
analysis/: 00_get_era_daily_tmax.py  01_process_era.py  02_era_climatology.py  0_era_meanshift.py  1_era_obs_delta.py  2a_get_moments.py  2b_moment_maps.py  2c_heatmap_figs.py  2d_scatter_figs.py
src/changing_heat_extremes/: analysis_helpers.py  flags.py  plot_helpers.py
src/heatwave_mean_shift/: __init__.py  analysis_helpers.py  flags.py
supplemental/: doy_climatology_smoothing.py  threshold_period_maps.py  ts_central_africa.py  ts_example.py
