[project]
dependencies = []
name = "changing-heat-extremes"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
changing_heat_extremes = { path = ".", editable = true }
hdp-python = {path = "/home/nathan/Projects/HDP", editable = true}

[tool.pixi.tasks]

[tool.pixi.activation.env]
# needed to fix a common error when importing regionmask / geopandas
PROJ_DATA = "$CONDA_PREFIX/share/proj"
PROJ_LIB = "$CONDA_PREFIX/share/proj"

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"
numpy = "<2.4"
gdal = ">=3.12.2,<4"
libgdal-core = ">=3.12.1,<4"
pyproj = ">=3.7.2,<4"
regionmask = ">=0.13.0,<0.14"
hvplot = ">=0.12.2,<0.13"
tastymap = ">=0.4.1,<0.5"
jupyter_bokeh = ">=4.0.5,<5"
geoviews = ">=1.15.1,<2"
selenium = ">=4.40.0,<5"
firefox = ">=147.0.2,<148"
geckodriver = ">=0.36.0,<0.37"
selenium-manager = ">=4.40.0,<5"
xarray-einstats = ">=0.9.1,<0.10"
statsmodels = ">=0.14.6,<0.15"
colorcet = ">=3.1.0,<4"
cdsapi = ">=0.7.7,<0.8"
xesmf = ">=0.9.2,<0.10"
cartopy = ">=0.25.0,<0.26"
polars = ">=1.38.1,<2"
flox = ">=0.11.1,<0.12"
rioxarray = ">=0.21.0,<0.22"
s3fs = ">=2026.2.0,<2027"



