[project]
dependencies = ["hdp-python @ git+https://github.com/nathanhwangbo/HDP.git"]
name = "heatwave-mean-shift"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
heatwave_mean_shift = { path = ".", editable = true }
# hdp-python = {path = "/home/nathan/Projects/HDP", editable = true}

[tool.pixi.tasks]
# individual tasks (one per script)
dl_data = "python analysis/00_get_era_daily_tmax.py"
regrid_era = "python analysis/01_process_era.py"
get_climatology = "python analysis/02_era_climatology.py"
get_hw_metrics = "python analysis/0_era_meanshift.py"
plot_hw_meanshift = "python analysis/1_era_obs_delta.py"
get_moments = "python analysis/2a_get_moments.py"
plot_moments = "python analysis/2b_moment_maps.py"
plot_heatmaps = "python analysis/2c_heatmap_figs.py"
plot_scatter = "python analysis/2d_scatter_figs.py"



# pipeline tasks that chains individual tasks together (e.g. pixi run analysis-pipeline)
dl-pipeline = { cmd = "echo 'Data download pipeline complete!'", depends-on = ["dl_data", "regrid_era"] }
processing-pipeline = { cmd = "echo 'Processing pipeline complete!'", depends-on = ["get_climatology", "get_hw_metrics", "get_moments"] }
plotting-pipeline = { cmd = "echo 'Plotting pipeline complete!'", depends-on = ["plot_hw_meanshift", "plot_moments", "plot_heatmaps", "plot_scatter"] }


[tool.pixi.activation.env]
# needed to fix a common error when importing regionmask / geopandas
PROJ_DATA = "$CONDA_PREFIX/share/proj"
PROJ_LIB = "$CONDA_PREFIX/share/proj"

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"
numpy = "<2.4"
gdal = ">=3.12.2,<4"
libgdal-core = ">=3.12.1,<4"
pyproj = ">=3.7.2,<4"
regionmask = ">=0.13.0,<0.14"
hvplot = ">=0.12.2,<0.13"
tastymap = ">=0.4.1,<0.5"
jupyter_bokeh = ">=4.0.5,<5"
geoviews = ">=1.15.1,<2"
selenium = ">=4.40.0,<5"
firefox = ">=147.0.2,<148"
geckodriver = ">=0.36.0,<0.37"
selenium-manager = ">=4.40.0,<5"
xarray-einstats = ">=0.9.1,<0.10"
statsmodels = ">=0.14.6,<0.15"
colorcet = ">=3.1.0,<4"
cdsapi = ">=0.7.7,<0.8"
xesmf = ">=0.9.2,<0.10"
cartopy = ">=0.25.0,<0.26"
polars = ">=1.38.1,<2"
flox = ">=0.11.2,<0.12"
rioxarray = ">=0.21.0,<0.22"
s3fs = ">=2026.2.0,<2027"
xskillscore = ">=0.0.29,<0.0.30"



